--- a/assest/style.css
+++ b/assest/style.css
@@ -15,15 +15,15 @@ body {
 .frameeVideo {
   width: 100%;
   height: 100%;
-  background-image: url('image/RFW.svg');
+  background-image: url(image/RFW.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
 }
 
-/* .frameeVideo.active {
-  background-image: url('image/RFG.svg');
-} */
+.frameeVideo.active {
+  background-image: url(image/RFG.svg);
+}
 
 .video-container {
   width: 100%;
@@ -95,6 +95,11 @@ body {
 
 
 @media screen and (max-width: 600px) {
+  .frameeVideo{
+    height: 40%;
+    width: 90%;
+    margin: auto;
+  }
   .video-container .userIcon {
     width: 50%;
     transform: translate(50%, 31%);
