--- a/assest/style.css
+++ b/assest/style.css
@@ -14,7 +14,7 @@ body {
 
 .frameeVideo {
   width: 100%;
-  height: 100%;
+  height: 80%;
   background-image: url(image/RFW.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -26,8 +26,11 @@ body {
 }
 
 .video-container {
-  width: 100%;
+  width: 70%;
   height: 70%;
+  background: red;
+  margin: auto;
+  transform: translateY(20%);
 }
 
 .video-container .userIcon {
@@ -95,11 +98,12 @@ body {
 
 
 @media screen and (max-width: 600px) {
-  .frameeVideo{
+  .frameeVideo {
     height: 40%;
     width: 90%;
     margin: auto;
   }
+
   .video-container .userIcon {
     width: 50%;
     transform: translate(50%, 31%);
@@ -107,6 +111,6 @@ body {
 
   #video {
     width: 89%;
-    transform: translate(7%, 65%);
+    /* transform: translate(7%, 65%); */
   }
 }
