--- a/assest/style.css
+++ b/assest/style.css
@@ -28,7 +28,7 @@ body {
 .video-container {
   width: 70%;
   height: 70%;
-  background: red;
+  /* background: red; */
   margin: auto;
   transform: translateY(20%);
 }
@@ -92,7 +92,7 @@ body {
 
   #video {
     width: 60%;
-    transform: translate(34%, 15%);
+    /* transform: translate(34%, 15%); */
   }
 }
 
