--- a/assest/style.css
+++ b/assest/style.css
@@ -89,7 +89,7 @@ button {
 
 .btns .btn,
 .btns .btn_play_pause {
-  width: 11em;
+  width: 8em;
   height: 70%;
   padding: 0;
   margin: 3px;
@@ -106,13 +106,14 @@ button {
   display: none;
 }
 
-.btns .btn:not(:nth-child(2)) {
-  width: 8em;
+.btns .btn:nth-child(1) {
+  width: 13em;
+}
+.btns .btn:nth-child(2) {
+  width: 11em;
 }
 
-.btns .btn:not(:nth-child(2)) img {
-  scale: 1;
-}
+
 
 .btns .btn img,
 .btns .btn_play_pause img {
@@ -122,6 +123,10 @@ button {
   padding: 2%;
   border-radius: 50%;
   scale: 0.8;
+}
+
+.btns .btn:first-child img {
+  scale: 0.7;
 }
 
 .btns .btn_play_pause button {
