--- a/assest/style.css
+++ b/assest/style.css
@@ -172,6 +172,10 @@ button {
     transform: translate(56%, 0%);
   }
 
+  .circle {
+    margin: 0.5% 12% 0 0;
+  }
+
   #video {
     width: 60%;
     transform: translate(6%, -11%);
@@ -217,8 +221,12 @@ button {
     scale: 1;
   }
 
+  .btns .btn .text {
+    line-height: 1.6;
+  }
+
   .circle {
-    margin: 0.5% 9% 0 0;
+    margin: 0.5% 10% 0 0;
   }
 
   .video-container .userIcon {
