--- a/assest/style.css
+++ b/assest/style.css
@@ -211,12 +211,12 @@ button {
   }
 
   .btns .btn_play_pause button {
-    width: 50%;
+    width: 45%;
     /* padding: 0; */
   }
 
   .btns .btn_play_pause img {
-    width: 90%;
+    max-width: 85%;
     /* padding: 6px; */
     scale: 1;
   }
