--- a/assest/style.css
+++ b/assest/style.css
@@ -43,7 +43,7 @@ body {
   height: 7%;
   background-color: var(--green);
   float: right;
-  margin: 0.5% 16% 0 0;
+  margin-right: 16%;
   border-radius: 50%;
   display: none;
 }
@@ -173,7 +173,7 @@ button {
   }
 
   .circle {
-    margin: 0.5% 12% 0 0;
+    margin-right: 12%;
   }
 
   #video {
@@ -226,7 +226,7 @@ button {
   }
 
   .circle {
-    margin: 0.5% 10% 0 0;
+    margin-right: 10%;
   }
 
   .video-container .userIcon {
