--- a/assest/style.css
+++ b/assest/style.css
@@ -165,7 +165,7 @@ button {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
 
   .video-container .userIcon {
     width: 48%;
