--- a/assest/style.css
+++ b/assest/style.css
@@ -22,6 +22,7 @@ body {
   background-image: url(image/background.png);
   background-position: center;
   background-size: cover;
+  box-sizing: border-box;
   overflow: hidden;
 }
 
