--- a/assest/style.css
+++ b/assest/style.css
@@ -35,11 +35,17 @@ body {
 }
 
 .frameeVideo {
-  width: 100%;
-  height: 45rem;
+  width: 85%;
+  /* height: 45rem; */
   background-repeat: no-repeat;
   background-position: top center;
   background-size: contain;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: absolute;
 }
 
 .frameeVideo.active {
@@ -47,16 +53,17 @@ body {
 }
 
 .circle {
-  width: 3%;
-  height: 8%;
+  width: 4%;
+  aspect-ratio: 1 / 1;
   background-color: var(--green);
   float: right;
   border-radius: 50%;
   display: none;
   position: relative;
-  top: 3%;
-  right: 18%;
-  transform: translate(-3%, -18%);
+  /* margin-right: 15%; */
+  /* top: 3%; */
+  /* right: 18%; */
+  /* /* transform: translate(-3%, -18%); */
 }
 
 .circle.animation {
@@ -77,16 +84,21 @@ body {
 }
 
 .video-container {
-  width: 70%;
+  width: 100%;
+  /* background: green; */
+  /* background-image: url(image/RFW.svg); */
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: contain;
   /* height: 100%; */
-  top: 50%;
-  left: 50%;
-  position: relative;
-  transform: translate(-50%, -50%);
+  /* top: 50%; */
+  /* left: 50%; */
+  /* position: relative; */
+  /* transform: translate(-50%, -50%); */
 }
 
 .video-container .userIcon {
-  width: 50%;
+  width: 25%;
   position: relative;
   top: -10%;
   left: 50%;
@@ -94,13 +106,15 @@ body {
 }
 
 #video {
-  width: 60%;
+  padding: 0;
+  /* margin: 0; */
+  width: 50%;
+  padding: 6%;
   display: none;
-  position: relative;
+  margin: auto;
   /* top: -15%; */
-  left: 50%;
-  transform: translate(-50%, 0);
-
+  /* left: 50%; */
+  /* transform: translate(-50%, 0); */
 }
 
 button {
@@ -178,10 +192,6 @@ button {
 
 
 @media (max-width: 430px) {
-  .frameeVideo {
-    height: 35rem;
-  }
-
   .circle {
     width: 3%;
     height: 2%;
